@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Administrator {

}

class Parameter {
  -code
  -shortName
  -description
}

class ParameterCategory {
  -code
  -description
  -nhsId
}



Company "1" -- "*" Administrator : has  >
Company "1" -- "*" ParameterCategory : adopts >
Company "1" -- "*" Parameter : capable of analysing >
Parameter "*" -- "1" ParameterCategory: presented under >
ParameterCategory "*" -- "1" Administrator: created by >
@enduml